# green-ctx

./: .gitignore  Justfile  README.md  benchmark.py  embedding_results.csv  examples.py  flash_attn_prefill_results.csv  flash_attn_results.csv  matmul_results.csv  profile-green-ctx.py  pyproject.toml  rms_norm_results.csv
IPC/: readme.md
IPC/task1/: cuda_ipc_client_read.cu  cuda_ipc_client_write.cu  cuda_ipc_memcpy_latency.cu  cuda_ipc_server.cu  result_plot.ipynb
IPC/task2/: cuda_ipc_client_poll.cu  cuda_ipc_server_update.cu
IPC/task3/: IPC_VMM_client_multi_process.cu  IPC_VMM_client_one_process.cu  IPC_VMM_server.cu  nv_sample_simple.cu
IPC/task4/: cuda_ipcget_crash_client.cu  cuda_ipcget_crash_server.cu  cuda_ipcopen_crash_client.cu  cuda_ipcopen_crash_server.cu
cupti-profiler/: CMakeLists.txt  Justfile  README.md  example-query.py  example-vllm.py  example.py  helper_cupti.h  pm_sample  pm_sampling.cu  pm_sampling.h  pm_sampling_binding.cpp  vis.ipynb  visualizer.py
data/: embedding_results.csv  flash_attn_decode_results.csv  flash_attn_prefill_results.csv  matmul_results.csv  rms_norm_results.csv
examples/: client_example.py
gtx-examples/: 0-basic-example.py  1-multi-clients-example.py  2-fast-ctx-switch.py  client_example.py
gtx-examples/example-1/: worker.py
hotos_exp/: benchmark_two_thds_colocation.py
memop/: Justfile  run-torch.py
memop/nvbit_release/: README.md
memop/nvbit_release/core/: nvbit.h
memop/nvbit_release/test-apps/vectoradd/: vectoradd.cu
memop/nvbit_release/tools/instr_count_cuda_graph/: Makefile
memop/nvbit_release/tools/mov_replace/: Makefile
memop/nvbit_release/tools/opcode_hist/: Makefile  (+2 more)
mps-testing/: test-concurrency.py  test-crash-isolation.py  test-max-thread-perc.py
prototypes/: Makefile  benchmark-bandwidth.cu  profile-green-ctx.py  prototype-green-ctx.cu
scripts/: generate_protos.sh
sosp-experiments/batched-tokens-graph/: plot-prefill-data.ipynb  profile-num-batched-tokens.py
sosp-experiments/dynamic-control-flow/: Justfile  compute_graph.txt  debug_dump.txt  memory_graph.txt  switch-demo.py  switch_lib.py  two-llms.py  two-streams-distribution.ipynb  two-streams.py
sosp-experiments/fairness/: Justfile  benchmark.py  proc-1.json  proc-2.json  results.md
sosp-experiments/gtx-and-cudagraph/: test.py
sosp-experiments/simulator/: Justfile  analysis-trace.ipynb  run-sample-workload.py  simulation.py
sosp-experiments/tput-max-smux-demo/: app.py  for-kernel-profile.py
src/green_ctx/: __init__.py  cli.py  kernels.py  temp.py  timing.py  utils.py
src/green_ctx/client/: client.py
src/green_ctx/proto/: gpu_service.proto  gpu_service_pb2.py  gpu_service_pb2_grpc.py
src/green_ctx/server/: __init__.py  kv_cache_pool.py  server.py
utility-curve/: README.md  llama-8b-kernels.py
(+1 files in other folders)
